--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <ul class="container-1">
             <li class="code">Home</li>
             <li class="code-1">Discovery</li>
             <li class="code-2">Photos</li>
@@ -21,39 +21,88 @@
 	<div class="container">
 		<div class="parent-relative">
 			<div>
-				<img src="photo/Group 1.svg">
+				<img src="images/Group 1.svg">
 				<p class="child-absolute">Dolore magna alicua</p>
 			</div>
 			<div class="tag-1">
 				<p class="tag-2">You can see this beautiful beach in Los Angeles, and I hope you will visit and enjoy it one day</p>
-				<img class="picture-2" src="photo/Ellipse-2.svg">
+				<img class="picture-2" src="images/Ellipse 2.svg">
 				<p class="tag-3">2m ago</p>
 			</div>
 		</div>
 		<div class="par-relative">
 			<div>
-				<img src="photo/Rectangle3.svg">
+				<img src="images/Rectangle 3.svg">
 				<p class="kid-absolute">Dolore magna alicua</p>
 			</div>
 			<div>
 				<p class="tag-2">You can see this beautiful beach in Ibiza , and 
 				I hope you will visit and enjoy it one day</p>
-				<img class="picture-2" src="photo/Ellipse-2.svg">
+				<img class="picture-2" src="images/Ellipse 2.svg">
 				<p class="tag-3">2m ago</p>
 			</div>
 		</div>
 		<div class="paren4-relative">
 			<div>
-				<img src="photo/Rectangle3.svg">
-				<p class="children-absolute">Dolore magna alicua</p>
+				<img src="images/Rectangle 4.svg">
+				<p class="kid-absolute">Dolore magna alicua</p>
 			</div>
 			<div>
 				<p class="tag-2">You can see this beautiful beach in Ibiza , and 
 				I hope you will visit and enjoy it one day</p>
-				<img class="picture-2" src="photo/Ellipse-2.svg">
+				<img class="picture-2" src="images/Ellipse 2.svg">
 				<p class="tag-3">2m ago</p>
 			</div>
 		</div>
+	</div>
+
+	<h2>HAPPENING NOW</h2>
+
+	<div class="something">
+		<div class="some1">
+		<img  src="images/Rectangle 7.svg">
+		<p class="kid8-absolute">Morbi eleifend a libero</p>
+		</div>
+		<div class="some2">
+		<img  src="images/Rectangle 8.svg">
+		</div>
+	</div>
+	<div class="room">
+		<img src="images/Rectangle 9.svg">
+		<img src="images/Rectangle 10.svg">
+		<img src="images/Rectangle 11.svg">
+	</div>
+
+
+	<div class="game-position-relative">
+		<img class="children19-absolute" src="images/geolab-owl.svg">
+		<nav class="toy">
+			<ul>
+				<li>Home</li>
+				<li>Discovery</li>
+				<li>Photos</li>
+				<li>Contact</li>
+			</ul>
+		</nav>
+		<nav class="toy_2">
+			<ul>
+			<li>About</li>
+			<li>Help</li>
+			<li>Terms</li>
+			<li>Guidlines</li>
+			</ul>
+		</nav>
+
+		<nav class="toy_3">
+			<ul>
+			<li>Testimonials</li>
+			<li>Advertise</li>
+			<li>Integrations</li>
+			<li>Careers</li>
+			</ul>
+		</nav>
+
+		<p class="toy_5">Stay with us in touch for the freshest products!</p>
 	</div>
 
 </body>
